debug/bitmagnet/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitmagnet
  annotations:
    tailscale.com/expose: "false"
  labels:
    app: bitmagnet

spec:
  ports:
    - name: http
      protocol: TCP
      port: 3333
      targetPort: http
  selector:
    app: bitmagnet
