debug/bitmagnet/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitmagnet
  labels:
    app: bitmagnet
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.x9.rs/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.x9.rs/oauth2/start?rd=https://$host$uri"
    hajimari.io/enable: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bitmagnet.x9.rs
      secretName: my-certs-bitmagnet
  rules:
    - host: bitmagnet.x9.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitmagnet
                port:
                  name: http
